--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,32 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <title>Contacto</title>
-  </head>
-  <body>
-    <header>
-      <!-- AQUI VA EL NAVBAR -->
-    </header>
-    <main>
-      <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
-    </main>
-    <footer>
-      <!-- AQUI VA EL FOOTER -->
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/styles/contact-form.css">
+  <title>Contacto</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Games Chief</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Panel de admin</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="my-4 bg-dark">
+    <section class="container">
+      <div class="row">
+        <div class="col col-5 py-4 d-flex flex-column align-items-center me-4">
+          <h1 class="text-start mb-4">Envianos tu consulta</h1>
+          <h3 class="fs-5 mb-4 ms-4">Completa el siguiente formulario y nos pondremos en contacto a la brevedad
+          </h3>
+          <form>
+            <div class="mb-3 d-flex flex-row">
+              <div class="col-6 me-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="col-6">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+            </div>
+            <div class="mb-3 d-flex flex-row">
+              <div class="col-6 me-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="col-6">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+              </div>
+            </div>
+            <div class="col-12 mb-3">
+              <textarea class="form-control" id="exampleCheck1"></textarea>
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="col col-5 justify-content-center py-4 ms-4">
+          <div class="mb-3">
+            <h2 class="title">Horarios</h2>
+            <p class="description">> Lunes a viernes de 8 a 12hs y de 16 a 20hs.
+              Sábados de 9 a 13hs</p>
+          </div>
+          <div class="mb-3">
+            <h2 class="title">Teléfono</h2>
+            <p class="description">> 03815783030</p>
+          </div>
+          <div class="mb-3">
+            <h2 class="title">Domicilio</h2>
+            <p class="description">> Gral. Paz 576, T4000 San Miguel de Tucumán, Tucumán</p>
+          </div>
+
+          <div class="direction_maps">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14240.408912962997!2d-65.21595657135413!3d-26. 836700630564255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13. 1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1644167911274!5m2!1ses-419!2sar "
+              width="600" height="450" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    <!-- AQUI VA EL FOOTER -->
+  </footer>
+</body>
+
 </html>
