--- a/index.html
+++ b/index.html
@@ -1,32 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./styles/login-register-style.css"/>
-    <title>Game Store</title>
-  </head>
-  <body>
-    <header>
-  
-    </header>
-    <main>
-      <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
-    </main>
-    <footer>
-      <!-- AQUI VA EL FOOTER -->
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="/scripts/form-reg.js" defer></script>
+  <link rel="stylesheet" href="./styles/log-reg.css" />
+  <title>Game Store</title>
+</head>
+
+<body>
+  <header>
+
+  </header>
+  <main>
+
+    <h2>REGISTRO DE USUARIO</h2>
+    <div class="row">
+      <div class="col-12 col-md-6 p-5 p-md-3">
+        <form id="user-register" onsubmit="registrarUsuario(event)">
+          <div class="mb-3">
+            <label for="fullname" class="form-label">Nombre completo</label>
+            <input name="fullname" type="text" class="form-control" id="fullname" maxlength="60" value="Valor inicial"
+              placeholder="Nombre y Apellido" required>
+          </div>
+          <div class="mb-3">
+            <label for="avatar" class="form-label">Imagen usuario</label>
+            <input name="avatar" type="text" class="form-control" maxlength="130" placeholder="url" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input name="email" type="email" class="form-control" id="email" maxlength="45"
+              placeholder="crash@bandicoot.com" required>
+          </div>
+          <div class="mb-1">
+            <div class="row">
+              <div class="col-6">
+                <label for="password" class="form-label">Contraseña</label>
+                <input name="password" type="password" class="form-control" id="password" minlength="6" maxlength="12"
+                  required>
+              </div>
+              <div class="col-6">
+                <label for="password2" class="form-label">Confirmar contraseña</label>
+                <input name="password2" type="password" class="form-control" id="password2" minlength="6" maxlength="12"
+                  required>
+              </div>
+            </div>
+          </div>
+          <div class="mb-1">
+            <div class="row">
+              <div class="col-6">
+                <label class="age" class="form-label">Edad</label>
+                <input name="age" type="number" class="form-control" id="age" min="1" max="120" required>
+              </div>
+              <div class="col-6">
+                <label class="gen" class="form-label">Género</label>
+                <select name="gen" class="form-select" id="gen" required>
+                  <option value="male">Hombre</option>
+                  <option value="female">Mujer</option>
+                  <option value="other">Otro</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="text-danger" id="form-error"></div>
+          <div class="my-3">
+            <button class="btn btn-primary" type="submit">Registrarme</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+<div class="col-12 col-md-6">
+  <ul id="users-list"></ul>
+</div>
+
+
+
+
+  </main>
+  <footer>
+    <!-- AQUI VA EL FOOTER -->
+  </footer>
+</body>
+
 </html>
