--- a/pages/log-reg.html
+++ b/pages/log-reg.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        < link rel = "stylesheet"
-        href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity = "sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin = "anonymous"
-        referrerpolicy = "no-referrer" / >
     </script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v13.0"
         nonce="AatELAbd"></script>
+    <script src="/scripts/log-reg.js" defer></script>
     <link rel="stylesheet" href="/styles/log-reg.css">
 </head>
 
 <body>
     <section class="container">
         <div class="forms">
+            <!-- FORMULARIO DE LOGIN -->
             <div class="form login">
                 <span class="title">INICIA SESION</span>
-                <form action="#">
+                <form id="login" action="#">
                     <div class="input-field">
-                        <input type="email" placeholder="Ingresá tu correo electrónico" required>
+                        <input id="loginEmail" type="email" placeholder="Ingresá tu correo electrónico" required>
                         <i class="uil uil-envelope icon ms-1"></i>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Ingresá tu contraseña" required>
+                        <input for="loginPassword" type="password" class="password" placeholder="Ingresá tu contraseña"
+                            required>
                         <i class="uil uil-lock icon ms-1"></i>
                         <i class="uil uil-eye-slash showHidePw"></i>
                     </div>
@@ -50,6 +44,7 @@
                     </div>
                     <div class="input-field button">
                         <input type="button" value="INICIAR SESION">
+                        <div class="text-danger" id="formLoginError"></div>
                     </div>
                 </form>
                 <div class="login-signup">
@@ -59,9 +54,9 @@
                 </div>
             </div>
             <div class="form signup mt-4">
+                <!-- FORMULARIO DE REGISTRO -->
                 <span class="title">REGISTRATE</span>
-
-                <form action="#">
+                <form id="user-register" onsubmit="registrarUsuario(event)">
                     <div class="input-field">
                         <input type="text" placeholder="Ingresá tu nombre completo" required>
                         <i class="uil uil-user ms-1"></i>
@@ -81,12 +76,12 @@
                     </div>
                     <div class="checkbox-text">
                         <div class="checkbox-content">
-                            <input type="checkbox" id="sigCheck">
+                            <input type="checkbox" id="sigCheck" required>
                             <label for="sigCheck" class="text">Acepto los términos y condiciones</label>
                         </div>
                     </div>
                     <div class="input-field button">
-                        <input type="button" value="REGISTRARME">
+                        <input type="submit" value="REGISTRARME">
                     </div>
                 </form>
                 <div class="login-signup">
@@ -98,16 +93,10 @@
         </div>
         <div class="fb-login-button mb-4" data-width="" data-size="large" data-button-type="login_with"
             data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
-        <div class="row">
-            <div class="col-md-3 mb-3">
-                <a class="btn btn-light" href="/users/googleauth" role="button" style="text-transform:none">
-                    <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-                    Iniciar sesión con Google
-                </a>
-            </div>
         </div>
+
     </section>
-    <script src="/scripts/log-reg.js"></script>
+
 </body>
+
 </html>
