--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -20,6 +20,7 @@
     <script src="../../scripts/admin/games-scripts.js" defer></script>
     <script src="../../scripts/admin/users-scripts.js" defer></script>
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
+    <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Administracion</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-0">
         <div class="container-fluid">
           <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-icon.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
             <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
           </div>
           <button
@@ -49,7 +50,7 @@
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
-              <li class="nav-item active"><a class="nav-link text-success" href="#">Admin</a></li>
+              <li class="nav-item active"><a class="nav-link text-success active" href="#">Admin</a></li>
               <li class="nav-item"><a class="nav-link text-danger" href="#">Salir</a></li>
             </ul>
           </div>
@@ -138,7 +139,7 @@
                   <!-- GAMES LIST MAIN -->
                   <div>
                     <div class="d-flex justify-content-between pb-2 px-4 py-3">
-                      <h2 class="align-self-center fs-lg-3 mb-0 ps-1" id="games-table-info-text"></h2>
+                      <h2 class="align-self-center fs-4 mb-0 ps-1" id="games-table-info-text"></h2>
                       <div>
                         <form class="d-flex">
                           <div class="input-group flex-nowrap">
@@ -318,7 +319,7 @@
         <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
       </div>
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-icon.svg" alt="" width="100"></a>
+        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
